--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
+    "url-loader": "^1.0.1",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.8",
+    "webpack-command": "^0.2.1",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "bootstrap": "^4.1.1"
+    "d3": "^5.5.0"
   }
 }
