--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
-    "d3": "^5.5.0"
+    "d3": "^5.5.0",
+    "d3-tip": "^0.9.1"
   }
 }
